# advent-of-code

./: ReadMe.md  git-crypt.key  git-crypt.md
.github/workflows/: rust.yml  scala2.yml  scala3.yml
2019/rust/: Cargo.toml  ReadMe.md
2019/rust/resources/: 03.txt  11.txt  16.txt  20.txt
2019/rust/src/: intcode.rs  lib.rs
2020/haskell/: Advent01.hs  Advent06.hs  ChangeLog.md  ReadMe.md  advent-of-code.cabal  package.yaml
2020/haskell/day01/: Main.hs
2020/haskell/day06/: Main.hs
2020/haskell/day18/: Main.hs
2020/haskell/day19/: Main.hs  input.txt
2020/haskell/src/: Lib.hs
2020/haskell/test/: Spec.hs
2020/rust/: .gitignore  Cargo.toml  ReadMe.md
2020/rust/resources/: 12.txt
2020/scala/: .gitignore  build.sbt
2020/src/main/scala/: Advent01.scala  Advent1.scala  Advent2.scala  Advent3.scala  Advent4.scala
2021/haskell/: ReadMe.md  advent-of-code.cabal
2021/haskell/src/Day05/: Solution.hs
2021/haskell/test/Day05/: SolutionSpec.hs  real.txt
2021/rust/: Cargo.toml  ReadMe.md
2021/rust/resources/: 18.txt
2021/rust/src/: lib.rs  parsing.rs  utils.rs
2021/scala/: .gitignore  build.sbt
2022/advent-of-code-2022/: .gitignore
2022/rust/src/: parsing.rs
2022/scala/: build.sbt
c++/: .gitignore  ReadMe.md  y2017_d23.cpp
clojure/: .gitattributes  .gitignore  ReadMe.adoc  project.clj
clojure/resources/y2017/day18/: real.txt  test-3.txt
clojure/src/y2017/: day_18.clj
clojure/test/y2017/: day_18_test.clj
dart/: .gitattributes  .gitignore  ReadMe.md  analysis_options.yaml  pubspec.yaml
dart/input/2017/: day21.txt
dart/lib/: grid.dart  util.dart
dart/lib/2017/: day21.dart
dart/test/2017/: dart_test.dart
f-sharp/: .gitattributes  .gitignore  ReadMe.md  f-sharp.sln
f-sharp/Common/: Common.fsproj  IO.fs
f-sharp/Year2017/: Day01.fs  Day01.txt  Year2017.fsproj
flix/: ReadMe.md
flix/src/: solution_2016_18.flix
go/: .gitattributes  ReadMe.md  go.mod
go/y2017/d20/: main.go  main_test.go  parser.go  particle.go  particle_test.go  real.txt  solver.go  utils.go  vec3.go
haskell/: .gitattributes  .gitignore  ReadMe.md  advent-of-code.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: Lib.hs
haskell/src/Lib/: Common.hs
haskell/src/Year2020/Day01/: Main.hs
haskell/src/Year2020/Day06/: Main.hs
haskell/src/Year2020/Day18/: Main.hs  input.txt
haskell/src/Year2020/Day19/: Main.hs  input.txt
haskell/src/Year2021/Day05/: Solution.hs
haskell/test/: LibSpec.hs
haskell/test/Year2021/Day05/: SolutionSpec.hs
java/: ReadMe.md  pom.xml
kotlin/: .gitattributes  .gitignore  ReadMe.adoc  build.gradle.kts  settings.gradle.kts
lean/: .gitignore  AdventOfCode.lean  Common.lean  ReadMe.md  lake-manifest.json  lakefile.lean
lean/Common/: Coords2D.lean  Direction.lean  InputOutput.lean  List.lean  Movement.lean  Option.lean  Pair.lean  Parsing.lean
lean/Year2016/: Day02.lean  Day02.txt
lean/Year2017/: Day02.lean  Day02.txt
purescript/: .gitattributes  ReadMe.md  packages.dhall  spago.dhall
purescript/resources/Year2016/: Day01.txt
purescript/src/Year2016/: Day01.purs
purescript/test/: Main.purs
purescript/test/Year2016/: Day01.purs
python/: .gitattributes  .gitignore  ReadMe.md  requirements.txt
python/y2018/: day23.py  day23.txt
python/y2022/: day19.py  day19.txt  day21.py
python/y2023/: day24.py
rescript/: .gitattributes  .gitignore  package-lock.json  package.json
rescript/data/: 2017_08_real.txt
rescript/src/: Solution_2017_08.res
rust/: .gitattributes  Cargo.toml  ReadMe.md  rustfmt.toml
rust/.run/: Clippy Fix.run.xml  Clippy.run.xml  Tests.run.xml
rust/common/: Cargo.toml
rust/common/src/: area2d.rs  bool_ops.rs  circular.rs  coords2d.rs  coords3d.rs  coords_hex.rs  cryptography.rs  cuboid.rs  direction.rs  direction_hex.rs  direction_with_diagonals.rs  graph.rs  grid2d.rs  lib.rs  math.rs  matrices.rs  mutable_bit_set.rs  pairing.rs  parsing.rs  rotation.rs  set.rs  set_of_two.rs  simulate.rs  utils.rs
rust/common/src/itertools/: group_by.rs  mod.rs
rust/y2015/: Cargo.toml
rust/y2015/resources/: 01.txt  02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  23.txt
rust/y2016/: Cargo.toml
rust/y2016/resources/: 03.txt  04.txt  06.txt  07.txt  08.txt  09.txt  10.txt  12.txt  15.txt  22-test.txt  22.txt  23.txt  25.txt
rust/y2016/src/: assembunny.rs  lib.rs
rust/y2017/: Cargo.toml
rust/y2017/resources/: 04.txt  05.txt  07.txt  09.txt  11.txt  12.txt  13.txt  16.txt  22.txt  24.txt
rust/y2017/src/: knot_hash.rs  lib.rs
rust/y2018/: Cargo.toml
rust/y2019/: Cargo.toml
rust/y2019/resources/: 01.txt  02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
rust/y2019/src/: intcode.rs
rust/y2020/: Cargo.toml
rust/y2020/resources/: 12.txt  13.txt  14.txt
rust/y2021/: Cargo.toml
rust/y2021/resources/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
rust/y2021/src/: parsing.rs  utils.rs
rust/y2022/: Cargo.toml
rust/y2023/: Cargo.toml
rust/y2023/resources/: 01.txt
rust/y2024/: Cargo.toml
rust/y2024/resources/: 02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  09.txt  10.txt  12.txt  13.txt  14.txt  18.txt  19.txt  22.txt  23.txt  24.txt  25.txt
rust/y2025/: Cargo.toml
rust/y2025/resources/: 00.txt
scala2/: .gitattributes  .scalafix.conf  .scalafmt.conf  ReadMe.md  build.sbt
scala2/project/: plugins.sbt
scala3/: .gitignore  .scalafix.conf  .scalafmt.conf  ReadMe.adoc  build.sbt
scala3/project/: plugins.sbt
swift/: .gitattributes  .gitignore  Package.swift  ReadMe.md
typescript/: .eslintrc.json  .gitattributes  .prettierrc  ReadMe.md  package-lock.json  package.json  tsconfig.json
typescript/src/util/: collections.ts
zig/: .gitattributes  .gitignore  ReadMe.md
zig/src/: advent_2023_09.zig  main.zig  utils.zig
(+536 files in other folders)
