name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Year2021.Day05.Solution
                     , Lib.Common
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , either
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable advent-01-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      src/Year2020/Day01
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-of-code
    , base >=4.7 && <5
  default-language: Haskell2010

executable advent-06-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      src/Year2020/Day06
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-of-code
    , base >=4.7 && <5
  default-language: Haskell2010

executable advent-18-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      src/Year2020/Day18
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-of-code
    , base >=4.7 && <5
    , lens
    , parsec
  default-language: Haskell2010

executable advent-19-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      src/Year2020/Day19
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-of-code
    , base >=4.7 && <5
    , containers
    , parsec
  default-language: Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Year2021.Day05.SolutionSpec
                     , LibSpec
  build-depends:       base
                     , advent-of-code
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/jurisk/advent-of-code
