[workspace]
members = ["common", "y2015", "y2016", "y2017", "y2018", "y2019", "y2020", "y2021", "y2022"]

[workspace.package]
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.69.0"

[workspace.dependencies]
nonempty = "0.8"
itertools = "0.10"
pathfinding = "4.2"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.6"
num-integer = "0.1"
num-bigint = "0.4"
nalgebra = "0.32"
memoize = "0.4"
nom = "7.1"
regex = "1.8"
rand = "0.8"
bimap = "0.6"
lazy_static = "1.4"
recap = "0.1"
serde = "1.0"
serde_json = "1.0"
bytecount = "0.6"
md5 = "0.7"
strum = { version = "0.24", features = ["derive"] }
integer-sqrt = "0.1"
