[workspace]
members = ["common", "y2015", "y2016", "y2017", "y2018", "y2019", "y2020", "y2021", "y2022", "y2023", "y2024"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.83.0"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
nonempty = "0.10"
itertools = "0.13"
pathfinding = "4.3"
num-traits = "0.2"
num-derive = "0.4"
num_enum = "0.7"
num-integer = "0.1"
num-bigint = "0.4"
nalgebra = "0.33"
memoize = "0.4"
nom = "7.1"
chumsky = "0.9"
regex = "1.9"
rand = "0.8"
bimap = "0.6"
bit-set = "0.8.0"
lazy_static = "1.4"
recap = { git = "https://github.com/jurisk/recap", branch = "fix_warn_non_local_definitions" }
serde = "1.0"
serde_json = "1.0"
bytecount = "0.6"
md5 = "0.7"
strum = { version = "0.26", features = ["derive"] }
integer-sqrt = "0.1"

[profile.release]
# For profiling:
debug = true
