[workspace]
members = ["common", "y2015", "y2016", "y2017", "y2018", "y2019", "y2020", "y2021", "y2022", "y2023", "y2024", "y2025"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.85.0"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
bimap = "0.6"
bit-set = "0.8.0"
bytecount = "0.6"
chumsky = "0.9"
integer-sqrt = "0.1"
itertools = "0.14"
lazy_static = "1.4"
md5 = "0.7"
memoize = "0.5"
nalgebra = "0.33"
nom = "7.1"
nonempty = "0.11"
num-bigint = "0.4"
num-derive = "0.4"
num-integer = "0.1"
num-traits = "0.2"
num_enum = "0.7"
pathfinding = "4.3"
rand = "0.9"
rayon = "1.10"
recap = { git = "https://github.com/jurisk/recap", branch = "fix_warn_non_local_definitions" }
regex = "1.9"
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }

[profile.release]
# For profiling:
debug = true
