[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
edition = "2021"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
itertools = "0.10"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5"
