[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
itertools = "0"
num-traits = "0"
num-derive = "0"
num_enum = "0"
rand = "0"
bimap = "0"
pathfinding = "3"
num-integer = "0"
num-bigint = "0"
