[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["jurisk <jurisk@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.64.0"

[dependencies]
regex = "1.5"
itertools = "0.10"
num-traits = "0.2"
num-derive = "0.3"
nalgebra = "0.31"
pathfinding = "3.0"
nonempty = "0.8"
num_enum = "0.5"
memoize = "0.3"
