[package]
name = "advent-of-code-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pathfinding.workspace = true
nonempty.workspace = true
num-traits.workspace = true
num-derive.workspace = true
itertools.workspace = true
md5.workspace = true
