[package]
name = "advent-of-code-2015"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
advent-of-code-common = { path = "../common" }
num_enum.workspace = true
itertools.workspace = true
nonempty.workspace = true
regex.workspace = true
recap.workspace = true
serde.workspace = true
md5.workspace = true
pathfinding.workspace = true
serde_json.workspace = true
memoize.workspace = true
strum.workspace = true
