[package]
name = "advent-of-code-2016"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
advent-of-code-common = { path = "../common" }
itertools.workspace = true
regex.workspace = true
nom.workspace = true
pathfinding.workspace = true
strum.workspace = true
recap.workspace = true
serde.workspace = true
num_enum.workspace = true