[package]
name = "advent-of-code-2019"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
itertools.workspace = true
num-traits.workspace = true
num-derive.workspace = true
num_enum.workspace = true
rand.workspace = true
bimap.workspace = true
pathfinding.workspace = true
num-integer.workspace = true
num-bigint.workspace = true
