[package]
name = "advent-of-code-2021"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
advent-of-code-common = { path = "../common" }
regex.workspace = true
itertools.workspace = true
num-traits.workspace = true
num-derive.workspace = true
nalgebra.workspace = true
pathfinding.workspace = true
nonempty.workspace = true
num_enum.workspace = true
memoize.workspace = true
nom.workspace = true
