[package]
name = "advent-of-code-2024"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
advent-of-code-common = { path = "../common" }
chumsky.workspace = true
itertools.workspace = true
regex.workspace = true
memoize.workspace = true
pathfinding.workspace = true